removing personal info

--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Contact Details</h1>
     <p>
-        gundersondustin@gmail.com
+        Dustin Gunderson
         <br>
-        625 Ontario St SE, Minneapolis, MN 55414
+        12345 abc lane, Minneapolis, MN
     </p>
 </body>
 </html>
