--- a/index.html
+++ b/index.html
@@ -8,15 +8,26 @@
 </head>
 
 <body>
-    <img src="https://media.licdn.com/dms/image/C4D03AQHMbwTlt4Q28g/profile-displayphoto-shrink_200_200/0?e=1568851200&v=beta&t=oM6H_ZRMrEUa4Ponz_wDHhKioz1gh8MwGNQxpDi6KJQ" alt="picture of Dustin Gunderson">
-    <h1>Dustin Gunderson</h1>
-    <p><em>Student at the <a href="https://twin-cities.umn.edu/">University of Minnesota - Twin Cities</a> </em></p>
-    <p>
-        I am a student studying <a href="https://www.beanactuary.org/what/">Actuarial Mathematics</a> and <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a>. 
-        I am currently working as an actuarial intern at <a href="https://www.pacificlife.com/">Pacific Life</a>, located in 
-        <a href="https://www.google.com/maps?client=firefox-b-1-d&q=aliso+viejo+ca&um=1&ie=UTF-8&sa=X&ved=0ahUKEwiBqOmto7XjAhXYLs0KHV30AoYQ_AUIECgB"> 
-            Aliso Viejo, California </a>.
-    </p>
+    <table cellspacing="20">
+        <tr>
+            <td><img src="https://media.licdn.com/dms/image/C4D03AQHMbwTlt4Q28g/profile-displayphoto-shrink_200_200/0?e=1568851200&v=beta&t=oM6H_ZRMrEUa4Ponz_wDHhKioz1gh8MwGNQxpDi6KJQ"
+                    alt="picture of Dustin Gunderson"></td>
+            <td>
+                <h1>Dustin Gunderson</h1>
+                <p><em>Student at the <a href="https://twin-cities.umn.edu/">University of Minnesota - Twin Cities</a>
+                    </em></p>
+                <p>
+                    I am a student studying <a href="https://www.beanactuary.org/what/">Actuarial Mathematics</a> and <a
+                        href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a>.
+                </p>
+            </td>
+        </tr>
+    </table>
+    I am currently working as an actuarial intern at <a href="https://www.pacificlife.com/">Pacific Life</a>, located in
+    <a
+        href="https://www.google.com/maps?client=firefox-b-1-d&q=aliso+viejo+ca&um=1&ie=UTF-8&sa=X&ved=0ahUKEwiBqOmto7XjAhXYLs0KHV30AoYQ_AUIECgB">
+        Aliso Viejo, California </a>.
+
     <hr>
     <h3>Education</h3>
     <p>
@@ -30,16 +41,60 @@
                     <li>35 ACT Score</li>
                 </ul>
             <li>University of Minnesota</li>
-                <ul>
-                    <li>Honors Program</li>
-                    <li>Double Major in Math and CS</li>
-                    <li>Presidential Scholarship Recipient</li>
-                </ul>
+            <ul>
+                <li>Honors Program</li>
+                <li>Double Major in Math and CS</li>
+                <li>Presidential Scholarship Recipient</li>
+            </ul>
         </ul>
     </p>
-    <a href = "hobbies.html">My Hobbies</a>
+    <hr>
+    <table cellspacing="10">
+        <thead>
+            <tr>
+                <th>Years</th>
+                <th>Position</th>
+                <th>Company</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2016-2017</td>
+                <td>Office Administrator</td>
+                <td>Edward Jones</td>
+            </tr>
+            <tr>
+                <td>2018</td>
+                <td>IT Application Developer</td>
+                <td>Entegris</td>
+            </tr>
+        </tbody>
+    </table>
+    <hr>
+    <h3>Skills</h3>
+    <table cellspacing="10">
+        <tr>
+            <td>Communication</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Object Oriented Programming</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Python</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>SQL</td>
+            <td>⭐⭐⭐</td>
+        </tr>
+    </table>
+    <hr>
+    <a href="hobbies.html">My Hobbies</a>
     <br>
-    <a href = "contact.html">Contact Me</a>
+    <a href="contact.html">Contact Me</a>
+
 </body>
 
 </html>
