--- a/contact.html
+++ b/contact.html
@@ -12,5 +12,15 @@
         <br>
         12345 abc lane, Minneapolis, MN
     </p>
+    <hr>
+    <form action="mailto:gundersondustin@gmail.com" method="post" enctype="text/plain">
+        <label>Your Name:</label>
+        <input type="text" name="name" value=""><br>
+        <label>Your Email:</label>
+        <input type="email" name="email" value=""><br>
+        <label>Your Message:</label><br>
+        <textarea name="message" rows = "10" cols = "30"></textarea><br>
+        <input type="submit" value="submit">
+    </form>
 </body>
 </html>
